--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -63,23 +63,56 @@ td { vertical-align: top; }
 
 
 /* ==|== primary styles =====================================================
-   ========================================================================== */
+ */
 
 body {
   background: #efefef;
   font-family: helvetica;
+  color: #333;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 20px 0 10px 0;
+}
+
+p {
+  margin: 10px 0;
+  line-height: 1.3;
+  font-size: 14px;
 }
 
 #container {
-  border-top: 10px solid #333;
+  width: 800px;
+  margin: 10px auto;
 }
 
-#wrapper {
-  width:800px;
-  margin: 0 auto;
-  padding: 20px;
+header {
 }
 
 header h1 {
   color: #A00;
+  margin-left: 20px;
+  font-size: 36px;
+}
+
+#main {
+  background: #fff;
+  box-shadow: 1px 1px 10px #999;
+  padding: 20px;
+}
+
+#status {
+  background: #ffff99;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+#status h2 {
+  margin: 0;
+}
+
+footer p {
+  float: right;
+  margin-right: 10px;
+  font-size: 12px;
 }
