--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,25 +17,39 @@
     
     <div id="main" role="main">
       <div id="status">
-        <h2>Current Status: Working on System Architecture diagram!</h2>
+        <h2>Current Status: Working on it!</h2>
       </div>
       
       <h2>Motivation</h2>
       <p>Twitter has established itself as a dominant force in the online social networking movement. The majority of users use Twitter to maintain their profile and update statuses which has the side effect of creating big data. Useful data can often be extracted from big data.</p>
       <p>However, Twitter does not lend itself to the typical data representation that is used by traditional search engines such as Google and as thus these copycat search engines adapted for Twitter do not display results in the best way possible considering the different key characteristics of Twitter's data.</p>
       
-      <h2>Why Search Twitter?</h2>
+      <h3>Why Search Twitter?</h3>
       <p>There are many reasons someone may want to search through the vast array of tweets, such as:</p>
       <ul>
-        <li>Looking for very recent tweets (real-time public reactions)</li>
-        <li>Finding opinions of known authors</li>
+        <li>Real-time results</li>
+        <li>Trend spotting for marketing purposes</li>
+        <li>Personal responses to real-world events</li>
+        <li>Find interesting people or friends</li>
+        <li>Find opinions of certain authors</li>
+        <li>Find all tweets corresponding to a hashtag</li>
+        <li>Use it as a daily news source</li>
       </ul>
 
-      <h2>Is it really broken?</h2>
-      <p>Yes..</p>
+      <h3>Use Cases</h3>
+      <p>Use case 1....</p>
+
+      <h3>The Current Search Model</h3>
+      <p>Examples of current twitter search to show how it doesn't work well with our use cases</p>
       
-      <h2>System Architecture</h2>
-      <p>The following is a diagram of</p>
+      <h2>The Solution</h2>
+      <p>The possible alternative visualisations for our use cases that better represent the results</p>
+      
+      <h3>System Architecture</h3>
+      <p>Diagram of the system and all the interlinking pieces goes here</p>
+
+      <h3>Implementation Concerns</h3>
+      <p>Update this with any issues or compromises</p>
       
       <h2>Supervision</h2>
       <p>This project is being supervised by <a href="http://homepages.inf.ed.ac.uk/ewan/">Ewan Klein</a> at the University of Edinburgh</p>
