--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>tweetsvu</title>
-  <meta name="description" content="trendvz is a final year honours project that evaluates better representations of twitter search results">
+  <meta name="description" content="tweetsvu is a final year honours project that evaluates better representations of Twitter search results">
   <meta name="author" content="Khurram Aslam">
   <link rel="stylesheet" href="stylesheets/style.css">
 </head>
-
 <body>
   <div id="container">
     <header>
@@ -17,47 +16,15 @@
     
     <div id="main" role="main">
       <div id="status">
-        <h2>Current Status: Working on it!</h2>
+        <h2>Current Status: Getting started with the implementation</h2>
       </div>
       
-      <h2>Motivation</h2>
-      <p>Twitter has established itself as a dominant force in the online social networking movement. The majority of users use Twitter to maintain their profile and update statuses which has the side effect of creating big data. Useful data can often be extracted from big data.</p>
-      <p>However, Twitter does not lend itself to the typical data representation that is used by traditional search engines such as Google and as thus these copycat search engines adapted for Twitter do not display results in the best way possible considering the different key characteristics of Twitter's data.</p>
-      
-      <h3>Why Search Twitter?</h3>
-      <p>There are many reasons someone may want to search through the vast array of tweets, such as:</p>
-      <ul>
-        <li>Real-time results</li>
-        <li>Trend spotting for marketing purposes</li>
-        <li>Personal responses to real-world events</li>
-        <li>Find interesting people or friends</li>
-        <li>Find opinions of certain authors</li>
-        <li>Find all tweets corresponding to a hashtag</li>
-        <li>Use it as a daily news source</li>
-      </ul>
-
-      <h3>Use Cases</h3>
-      <p>Use case 1....</p>
-
-      <h3>The Current Search Model</h3>
-      <p>Examples of current twitter search to show how it doesn't work well with our use cases</p>
-      
-      <h2>The Solution</h2>
-      <p>The possible alternative visualisations for our use cases that better represent the results</p>
-      
-      <h3>System Architecture</h3>
-      <p>Diagram of the system and all the interlinking pieces goes here</p>
-
-      <h3>Implementation Concerns</h3>
-      <p>Update this with any issues or compromises</p>
-      
-      <h2>Supervision</h2>
-      <p>This project is being supervised by <a href="http://homepages.inf.ed.ac.uk/ewan/">Ewan Klein</a> at the University of Edinburgh</p>
+      <%= yield %>
     </div>
 
     <footer>
       <p>Developed by <a href="mailto:khurram@aslam.me">Khurram Aslam</a> at the University of Edinburgh, 2011</p>
     </footer>
-  </div> <!-- end of #container -->
+  </div><!-- end of #container -->
 </body>
 </html>
