--- a/views/index.erb
+++ b/views/index.erb
@@ -1,23 +1,27 @@
-<h2>Motivation</h2>
+<h1>Motivation</h1>
 
-<h3>Abstract</h3>
+<h2>Abstract</h2>
 <p><a href="http://twitter.com">Twitter</a> has established itself as a dominant force in the online social networking movement. The majority of Twitter users maintain their profile, update statuses or send messages to friends and followers. 250 Million of these messages are posted a day and thus mining this data is of great interest to researchers, marketers and regular users</p>
 <p>Twitter provide a search interface to traverse their data, which is essentially a bolted on traditional search engine. The single ranked list used however is not a good solution for presenting the unconventional nature of Twitter data. A more elegant approach that considers original messages, re-tweets, social graphs and location is much more appropriate for this type of data.</p>
 <p>In this project we establish the problems with the traditional list representation used in Twitter search, describe alternative design solutions that better present the data, making it easier to navigate and explore, and finally present a solution that proves useful for users wishing to see trends and explore the data in novel way.</p>
       
-<h3>Reasons to Search Twitter</h3>
+<h2>Reasons to Search Twitter</h2>
 <p>I conducted a survey with 17 participants in attempt to find out why exactly current users search Twitter. I asked each participant to state how often they use Twitter search and then to select the most relevant reason for searching Twitter at this frequency. There is potential for the survey to be skewed as the participants were all in the 18-25 age range and technically savvy. However the intention was to provide results that may be somewhat better than a personal guess.</p>
 <p>The results are presented in the following graph:</p>
 <img src="images/survey.jpg">
 
-<h3>The Current Search Model</h3>
+There are various benefits of social media search, such as trust and personal interaction, low latency and access to niche information that rarely surfaces through web searches.
+
+Social media search queries often represent broad or vague information needs, and thus call for a more browsing-oriented interface than web search, which is optimized for highly specific needs.
+
+<h2>The Current Search Model</h2>
 <p>The problem with the current interface is that it inherits from traditional search engines such as <a href="http://google.com">Google</a> and is optimized for showing the most recent results. The small size of a tweet makes it incredibly difficult to estimate the relevance, which would normally be relatively straight-forward with traditional ranking algorithms. The interface does not favour towards metadata such as location, original tweets/re-tweets, documents within tweets, sentiment analysis or exploration of results.</p>
 <p>The following is a snapshot of the results for the hashtag 'programming', which clearly validates these problems as the top results don't seem to be very useful (07/12/11):</p>
 <a href="images/existingresults.png">
   <img width="500" src="images/existingresults.png"></img>
 </a>
 
-<h3>Existing Research and Relevant People</h3>
+<h2>Existing Research and Relevant People</h2>
 <ul>
   <li><a href="http://www.hilarymason.com/">Hilary Mason</a></li>
   <li><a href="http://cacm.acm.org/blogs/blog-cacm/71444-third-workshop-on-search-and-social-media-ssm-2010/fulltext">Search and Social Media (SSM2010)</a></li>
@@ -30,10 +34,7 @@
   <li><a href="http://brodiesnotes.blogspot.com/2011/05/list-of-tools-for-finding-or-capturing.html">Tools for capturing Tweets</a></li>
 </ul>
 
-<h2>Proposed Solution</h2>
+<h1>Proposed Solution</h1>
 
-<h3>Initial Prototype</h3>
+<h2>Initial Prototype</h2>
 <p>Update this with any issues or compromises</p>
-      
-<h2>Supervision</h2>
-<p>This project is being supervised by <a href="http://homepages.inf.ed.ac.uk/ewan/">Ewan Klein</a> at the University of Edinburgh</p>
