--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,22 +9,16 @@
   <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
-  <div id="container">
-    <header>
-      <h1>tweetsvu</h1>
-    </header>
-    
-    <div id="main" role="main">
-      <div id="status">
-        <h2>Current Status: Getting started with the implementation</h2>
-      </div>
-      
-      <%= yield %>
-    </div>
-
+  <header>
+    <div id="logo">tweetsvu</div>
+  </header>
+  
+  <div id="main" role="main">
+    <h1 id="status">Status: Starting the implementation</h1>
+    <%= yield %>
+    <hr>
     <footer>
-      <p>Developed by <a href="mailto:khurram@aslam.me">Khurram Aslam</a> at the University of Edinburgh, 2011</p>
-    </footer>
-  </div><!-- end of #container -->
+      <p>This project is being developed by <a href="mailto:khurram@aslam.me">Khurram Aslam</a> under supervision of <a href="http://homepages.inf.ed.ac.uk/ewan/">Ewan Klein</a> at the<br /> University of Edinburgh 2011</p>
+  </div><!-- end of #main -->
 </body>
 </html>
