updating content structure

--- a/views/index.erb
+++ b/views/index.erb
@@ -36,7 +36,7 @@ Social media search queries often represent broad or vague information needs, an
   <img width="500" src="images/existingresults.png"></img>
 </a>
 
-<h1>4. Design Methodology</h1>
+<h1>4. The Approach</h1>
 
 <h1>5. Implementation</h1>
 <h2>5.1 Initial Prototype</h2>
