--- a/views/index.erb
+++ b/views/index.erb
@@ -25,9 +25,9 @@
 <p>The results are presented in the following graph:</p>
 <img src="images/survey.jpg">
 
-There are various benefits of social media search, such as trust and personal interaction, low latency and access to niche information that rarely surfaces through web searches.
+<p>There are various benefits of social media search, such as trust and personal interaction, low latency and access to niche information that rarely surfaces through web searches.</p>
 
-Social media search queries often represent broad or vague information needs, and thus call for a more browsing-oriented interface than web search, which is optimized for highly specific needs.
+<p>Social media search queries often represent broad or vague information needs, and thus call for a more browsing-oriented interface than web search, which is optimized for highly specific needs.</p>
 
 <h2>3.2 The Current Search Model</h2>
 <p>The problem with the current interface is that it inherits from traditional search engines such as <a href="http://google.com">Google</a> and is optimized for showing the most recent results. The small size of a tweet makes it incredibly difficult to estimate the relevance, which would normally be relatively straight-forward with traditional ranking algorithms. The interface does not favour towards metadata such as location, original tweets/re-tweets, documents within tweets, sentiment analysis or exploration of results.</p>
