--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
   </header>
   
   <div id="main" role="main">
-    <h1 id="status">Status: Starting the implementation</h1>
+    <h1 id="status">Status: Designing the Approach</h1>
     <%= yield %>
     <hr>
     <footer>
