--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,11 +10,10 @@
 </head>
 <body>
   <header>
-    <div id="logo">tweetsvu</div>
+    <div id="logo"><a href="/">tweetsvu</a></div>
   </header>
   
   <div id="main" role="main">
-    <h1 id="status">Status: Designing the Approach</h1>
     <%= yield %>
     <hr>
     <footer>
