--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <form id="queryform" action="/search" method="post">
   <input type="text" name="query" id="box" placeholder="#hashtag"/>	
-  <input type="submit" id="submit"/>
+  <input type="submit" id="submit" value="Search"/>
 </form>
 
 <% if @results %>
