--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,14 @@
 </head>
 <body>
   <header>
-    <div id="logo"><a href="/">tweetsvu</a></div>
+    <div id="headermiddle">
+      <div id="logo">
+        <a href="/">tweetsvu</a>
+      </div>
+      <div id="reportlink">
+        <a href="/report">View the report</a>
+      </div>
+    </div>
   </header>
   
   <div id="main" role="main">
