updated styling to twitter bootstrap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,175 +1,2 @@
-/* HTML5 ✰ Boilerplate
- * ==|== normalize ==========================================================
- */
-
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
-audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
-audio:not([controls]) { display: none; }
-[hidden] { display: none; }
-
-html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-body { margin: 0; font-size: 13px; line-height: 1.231; }
-body, button, input, select, textarea { font-family: sans-serif; color: #222; }
-
-::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
-::selection { background: #fe57a1; color: #fff; text-shadow: none; }
-
-a { color: #4099FF; }
-a:visited { color: #4099FF; }
-a:hover { color: #06e; }
-a:focus { outline: thin dotted; }
-a:hover, a:active { outline: 0; }
-
-abbr[title] { border-bottom: 1px dotted; }
-b, strong { font-weight: bold; }
-blockquote { margin: 1em 40px; }
-dfn { font-style: italic; }
-hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
-ins { background: #ff9; color: #000; text-decoration: none; }
-mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
-pre, code, kbd, samp { font-family: monospace, monospace; _font-family: 'courier new', monospace; font-size: 1em; }
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
-q { quotes: none; }
-q:before, q:after { content: ""; content: none; }
-small { font-size: 85%; }
-sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
-sup { top: -0.5em; }
-sub { bottom: -0.25em; }
-ul, ol { margin: 1em 0; padding: 0 0 0 40px; }
-dd { margin: 0 0 0 40px; }
-nav ul, nav ol { list-style: none; list-style-image: none; margin: 0; padding: 0; }
-img { border: 0; -ms-interpolation-mode: bicubic; vertical-align: middle; }
-svg:not(:root) { overflow: hidden; }
-figure { margin: 0; }
-
-form { margin: 0; }
-fieldset { border: 0; margin: 0; padding: 0; }
-label { cursor: pointer; }
-legend { border: 0; *margin-left: -7px; padding: 0; }
-button, input, select, textarea { font-size: 100%; margin: 0; vertical-align: baseline; *vertical-align: middle; }
-button, input { line-height: normal; *overflow: visible; }
-table button, table input { *overflow: auto; }
-button, input[type="button"], input[type="reset"], input[type="submit"] { cursor: pointer; -webkit-appearance: button; }
-input[type="checkbox"], input[type="radio"] { box-sizing: border-box; }
-input[type="search"] { -webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box; box-sizing: content-box; }
-input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
-button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
-textarea { overflow: auto; vertical-align: top; resize: vertical; }
-input:valid, textarea:valid {  }
-input:invalid, textarea:invalid { background-color: #f0dddd; }
-
-table { border-collapse: collapse; border-spacing: 0; }
-td { vertical-align: top; }
-
-/* ==|== primary styles ===================================================== */
-
-body { background-color: #f5f5f5; font: 16px Palatino, serif; line-height: 1.4; }
-h1, h2, h3 { margin: 20px 0 10px 0; }
-p, a, ul { margin: 10px 0; }
-a { text-decoration: none; }
-img { margin: 0 auto; display: block; }
-
-header {
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  width: 100%;
-  height: 40px;
-  background: #252525 url('../images/headerbg.png') repeat-x 0 0;
-  -webkit-box-shadow: 0 3px 3px rgba(0,0,0,.25);
-     -moz-box-shadow: 0 3px 3px rgba(0,0,0,.25);
-          box-shadow: 0 3px 3px rgba(0,0,0,.25);
-}
-
-header #headermiddle {
-  margin: 0 auto;
-  width: 820px;
-}
-
-header #logo {
-  float: left;
-  padding-top: 2px;
-}
-header #logo a {
-  color: white;
-  font: bold 28px sans-serif;
-}
-
-header #reportlink {
-  float: right;
-  padding-top: 6px;
-  font-size: 20px;
-}
-
-#main {
-  background: white;
-  width: 740px;
-  margin: 60px auto 80px;
-  padding: 40px 60px;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.2);
-     -moz-box-shadow: 0 5px 15px rgba(0,0,0,.2);
-          box-shadow: 0 5px 15px rgba(0,0,0,.2);  
-}
-
-#status {
-  background: #ffff99;
-  margin: 0;
-  padding: 10px;
-  font-family: sans-serif;
-  text-align: center;
-}
-
-footer p {
-  text-align: center;
-}
-
-/* ==|== index ============================================================== */
-
-#queryform {
-  font-size: 24px;
-  margin: 0 auto 50px auto;
-  width: 520px;
-}
-
-input#box {
-  padding: 6px;
-  border: 1px solid #999;
-  width: 400px;
-  -moz-box-shadow:inset 2px 2px 5px #ccc;
-  box-shadow:inset 2px 2px 5px #ccc;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-}
-
-input#submit {
-  width: 100px;
-  height: 41px;
-  border: none;
-  color: white;
-  background-color:#4099FF;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-}
-
-.tweet {
-  float: left;
-  width: 100%;
-  border-top: 1px dotted #ccc;
-  padding: 10px 0;
-  margin-bottom: 10px;
-}
-
-.profileimage {
-  float: left;
-  margin-right: 30px;
-}
-
-.tweetcontent {
-  float: left;
-  width: 660px;
-}
+@import url('bootstrap.css');
+@import url('app.css');
