--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
   <div class="topbar">
     <div class="fill">
       <div class="container">        
-        <a class="brand" href="/">tweetsvu</a>
+        <a class="brand" href="/"><span class="blue">#</span>tweetsvu</a>
         <ul class="nav">
           <li class="active"><a href="/">App</a></li>
           <li><a href="/report">Report</a></li>
@@ -32,7 +32,7 @@
       <%= yield %>
       
       <footer>
-        <p>This project is being developed by <a href="mailto:khurram@aslam.me">Khurram Aslam</a> under supervision of <a href="http://homepages.inf.ed.ac.uk/ewan/">Ewan Klein</a> at the<br /> University of Edinburgh 2011</p>
+        <p>This project is being developed by <a href="mailto:khurram@aslam.me">Khurram Aslam</a> under supervision of <a href="http://homepages.inf.ed.ac.uk/ewan/">Ewan Klein</a> at the<br /> University of Edinburgh</p>
       </footer>
     </div> <!-- end of .content -->
   </div> <!-- end of .container -->
