using twitter bootstrap

--- a/views/report.erb
+++ b/views/report.erb
@@ -20,9 +20,17 @@
   <li><a href="http://brodiesnotes.blogspot.com/2011/05/list-of-tools-for-finding-or-capturing.html">Tools for capturing Tweets</a></li>
   <li><a href="http://blog.tweetsmarter.com/twitter-search/10-ways-and-20-features-for-searching-old-tweets/">Searching old tweets</a></li>
   <li><a href="http://locomotivation.squeejee.com/post/158183764/twitterland-all-the-best-twitter-related-apis-in-one-gem">Twitterland gem for Ruby</a></li>
+  <li><a href="http://nlp.stanford.edu/courses/cs224n/2010/reports/drao-sidbatra.pdf">Twitter sentiment analysis</a></li>
+  <li><a href="http://www.ece.stevens-tech.edu/~mouli/twitter.pdf">Twitter analytics</a></li>
+  <li><a href="http://socialmediatoday.com/eric-goldstein/295232/most-complete-twitter-application-list-available-2011-edition">Complete twitter app list</a></li>
+  <li><a href="http://hashtagify.me">hashtagify.me</a></li>
+  <li><a href="http://twitter.github.com/bootstrap/">Twitter bootstrap</a></li>
+  <li><a href="http://sinatra-book.gittr.com">Sinatra book</a></li>
+  <li><a href="http://engineering.twitter.com">Twitter engineering blog</a></li>
 </ul>
 <p>Other Twitter search engines</p>
 <ul>
+  <li><a href="http://tawlk.com">Tawlk</a></li>
   <li><a href="http://www.twitterment.com">Twitterment</a></li>
   <li><a href="http://www.twazzup.com">Twazzup</a></li>
   <li><a href="http://www.twitscoop.com/">Twitscoop</a></li>
