--- a/templates/report.html
+++ b/templates/report.html
@@ -27,8 +27,10 @@
   <li><a href="http://socialmediatoday.com/eric-goldstein/295232/most-complete-twitter-application-list-available-2011-edition">Complete twitter app list</a></li>
   <li><a href="http://hashtagify.me">hashtagify.me</a></li>
   <li><a href="http://twitter.github.com/bootstrap/">Twitter bootstrap</a></li>
-  <li><a href="http://sinatra-book.gittr.com">Sinatra book</a></li>
   <li><a href="http://engineering.twitter.com">Twitter engineering blog</a></li>
+  <li><a href="http://infosthetics.com/archives/2011/12/follow_the_hash_tag_dynamic_bubble_graphs_of_tweets.html">Follow the hash tag</a></li>
+  <li><a href="http://rooreynolds.com/2010/10/12/twitter-and-the-apprentice-some-quick-observations/">Twitter Apprentice</a></li>
+  <li><a href="http://flask.pocoo.org/docs/flask-docs.pdf">Flask documentation</a></li>
 </ul>
 <p>Other Twitter search engines</p>
 <ul>
