--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 <form id="queryform" action="/search" method="get">
-    <input type="text" name="q" required="required" class="span8" placeholder="#hashtag"/>
-    <input type="submit" class="btn primary" value="Search"/>
+  <input type="text" name="q" class="span8" placeholder="#hashtag"/>
+  <input type="submit" class="btn primary" value="Search"/>
 </form>
 {% endblock %}
