--- a/static/css/app.css
+++ b/static/css/app.css
@@ -75,16 +75,15 @@ p {
   margin: 0;
 }
 
-#results .row p.positive {
-  border: 1px solid green;
+#results .row h3 {
+  padding-left: 14px;
+  line-height: 1;
+  padding-bottom: 10px;
 }
 
-#results .row p.negative {
-  border: 1px solid red;
-}
-
-#results .row p.neutral {
-  border: 1px solid #ccc;
+#results .row h3 .timesince{
+  float: right;
+  font-size: 16px;
 }
 
 footer {
